Update template